@@ -470,8 +470,9 @@ void LibInit()
   new DLibPro(lib::window,string("WINDOW"),1,windowKey);
   new DLibPro(lib::wdelete,string("WDELETE"),-1);
   new DLibPro(lib::wset,string("WSET"),1);
-  const string wshowWarnKey[]={"ICONIC", KLISTEND};
-  new DLibPro(lib::wshow,string("WSHOW"),2,NULL,wshowWarnKey);
+
+  const string wshowKey[]={"ICONIC", KLISTEND};
+  new DLibPro(lib::wshow,string("WSHOW"),2,wshowKey);
 
   const string cursorKey[]={"CHANGE","DOWN","NOWAIT","UP","WAIT",
 				"DATA","DEVICE","NORMAL",KLISTEND};
