@@ -560,3 +560,4 @@
 	   - support for empty arrays and !NULL system variable
 	   - promotion of FOR loop index variable type
 	   - various improvments on READ_JPEG, READ_PNG, WRITE_JPEG, WRITE_PNG
+	   - keyword ICONIC in WSHOW
